# Networking-Server

./: .gitignore  CMakeLists.txt
Server/: CMakeLists.txt  Client.cpp  Server.cpp
Server/App/: App.cpp  App.h
Server/Client/: Client.cpp  Client.h
Server/NetworkTypes/: NetworkingTypes.h
Server/Networking/: NetworkingTypes.h  Socket.h
Server/TCPClient/: TCPClient.cpp  TCPClient.h
Server/TCPServer/: TCPServer.cpp  TCPServer.h
Server/Types/: types.h
